@@ -1,9 +1,4 @@
 cache
 inc/config.php
 \.htaccess
-public/filters
-themes/ductile/_work
-themes/ductile-work
-themes/ductile/default-templates
-themes/ductileMag
-themes/ductileFocus
+public
