@@ -19,6 +19,19 @@ $q = !empty($_GET['q']) ? $_GET['q'] : null;
 $page = !empty($_GET['page']) ? (integer) $_GET['page'] : 1;
 $nb_per_page =  10;
 
+$post_types = $core->getPostTypes();
+foreach ($post_types as $k => $v) {
+ 	$type_combo[__($k)] = (string) $k;
+}
+$type = !empty($_POST['type']) ? $_POST['type'] : null;
+if (!$type && $q) {
+	// Cope with search form
+	$type = !empty($_GET['type']) ? $_GET['type'] : null;
+}
+if (!in_array($type, $type_combo)) {
+	$type = null;
+}
+
 $params = array();
 $params['limit'] = array((($page-1)*$nb_per_page),$nb_per_page);
 $params['no_content'] = true;
@@ -28,16 +41,27 @@ if ($q) {
 	$params['search'] = $q;
 }
 
+if ($type) {
+	$params['post_type'] = $type;
+}
+
 dcPage::openPopup(__('Add a link to an entry'),
 	dcPage::jsLoad('js/_posts_list.js').
 	dcPage::jsLoad('js/jsToolBar/popup_posts.js'));
 
 echo '<h2 class="page-title">'.__('Add a link to an entry').'</h2>';
 
+echo '<form action="popup_posts.php" method="post">'.
+	'<p><label for"type" class="classic">'.__('Entry type:').' '.form::combo('type',$type_combo,$type).'</label></p>'.
+	$core->formNonce().
+	'<noscript><div><input type="submit" value="'.__('Ok').'" /></div></noscript>'.
+	'</form>';
+
 echo '<form action="popup_posts.php" method="get">'.
-'<p><label for="q" class="classic">'.__('Search entry:').' '.form::field('q',30,255,html::escapeHTML($q)).'</label> '.
-' <input type="submit" value="'.__('Search').'" /></p>'.
-'</form>';
+	'<p><label for="q" class="classic">'.__('Search entry:').' '.form::field('q',30,255,html::escapeHTML($q)).'</label> '.
+	' <input type="submit" value="'.__('Search').'" /></p>'.
+	form::hidden('type',html::escapeHTML($type)).
+	'</form>';
 
 try {
 	$posts = $core->blog->getPosts($params);
