@@ -22,7 +22,7 @@
       <li><strong>online</strong>: blog open to visitors</li>
       <li><strong>offline</strong>: blog closed to visitors
       but open to writers.</li>
-      <li><strong>removed</strong>: blog closed to both visitors and writers.</li>
+      <li><strong>removed</strong>: blog closed to both visitors and writers, opened only for super-administrators.</li>
     </ul>
   </dd>
   
