@@ -29,8 +29,8 @@
       <li><strong>en ligne</strong>&nbsp;: blog accessible aux visiteurs</li>
       <li><strong>hors ligne</strong>&nbsp;: blog inaccessible aux visiteurs
       mais les rédacteurs peuvent se connecter</li>
-      <li><strong>supprimé</strong>&nbsp;: blog inaccessible aux visiteurs
-      comme aux rédacteurs</li>
+      <li><strong>retiré</strong>&nbsp;: blog inaccessible aux visiteurs
+      comme aux rédacteurs, seuls les super-administrateurs peuvent y accéder</li>
     </ul>
   </dd>
   
