@@ -33,5 +33,7 @@ vigilants.</p>
 <a href="http://doc.dotclear.net/2.0/resources/templates">liste des marqueurs
 de template</a>.</p>
 
+<p>Notez que vous pouvez activer la coloration syntaxique dans vos préférences (onglet « Mes options »).</p>
+
 </body>
 </html>
