@@ -24,5 +24,7 @@
 
 <p>To help modify your templates, you may consult the <a href="http://doc.dotclear.net/2.0/resources/templates">template tag list</a>.</p>
 
+<p>Note: You can activate syntax coloration in your preferences (“My options” tab).</p>
+
 </body>
 </html>
